--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,12 @@ jobs:
             python -m venv .venv
             source .venv/bin/activate
           fi
+
           python -m pip install -U setuptools wheel
-          python setup.py bdist_wheel
+          if [[ "$RUNNER_OS" == "Linux" ]] && [[ "$RUNNER_ARCH" == "ARM64" ]]; then
+            python setup.py bdist_wheel --plat-name=manylinux2014_aarch64
+          else
+            python setup.py bdist_wheel
+          fi
           python -m pip install -U twine
           python -m twine upload dist/*
